# -face-hand-tracker-

./: .gitignore  AI_HandStyle_Plan.txt  AI_HandStyle_Speed_Plan.txt  AI_Style_Plan.txt  CMakeLists.txt  COMMAND_HISTORY.md  ERROR_HISTORY.md  Error_List.txt  Error_analyze.txt  Idea_AE.txt  README.md  app.py  diagnose_face.py  main.py  make_exe_file.bat  run.sh  test_pipeline.py
scripts/: import_to_ae.jsx  pose_to_null.jsx
sessions/: session_2026-04-06.md  session_2026-04-10.md  session_2026-04-12.md  session_2026-04-21.md  session_2026-04-23.md  session_2026-04-24.md  session_2026-04-25.md  session_2026-04-26.md  session_2026-04-27.md  session_2026-05-04.md  session_2026-05-05.md
src/: Exporter.cpp  Exporter.hpp  Tracker.cpp  Tracker.hpp  TrackingData.hpp  anime_converter.py  avatar_renderer.py  camera_panel.py  cartoon_hand_ai.py  exporter.py  face_pipeline.py  insightface_detector.py  main.cpp  puppet_pin.py  tracker.py  video_panel.py
